<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ForgetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="325dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:paddingTop="75dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/samyak_kamble"
                        android:textColor="#ffff"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:text="@string/code_with_samyak"
                        android:textColor="#ffff"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="80dp"
                        android:layout_height="4dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="22dp"
                        android:background="#c1c1c1" />


                </LinearLayout>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="-60dp"
                    android:layout_marginBottom="12dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="16dp"
                            android:text="@string/login"
                            android:textColor="@android:color/black"
                            android:textSize="22sp"
                            android:textStyle="bold" />



                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="12dp">

                            <com.google.android.material.textfield.TextInputEditText

                                android:id="@+id/forEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress" />
                        </com.google.android.material.textfield.TextInputLayout>





                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forgetBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="Forget Password"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>